--- a/app/src/main/res/layout/home_activity.xml
+++ b/app/src/main/res/layout/home_activity.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical">
 
     <com.videogo.widget.TitleBar
-        android:id="@+id/title_bar_portrait"
+        android:id="@+id/tb_home"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
